<resources>
    <string name="app_name">TokmanGary_CE04</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="employee_number_hint">Employee number ex: 1</string>
    <string name="hire_date_hint">Hire date ex: MM/DD/YYYY</string>
    <string name="status_hint">Status ex: Full time</string>
    <string name="register_button">Register Form</string>
    <string name="delete_summary">Delete all people in the list.</string>
    <string name="delete_title">Delete all</string>
    <string name="list_summary">Change the date format of the employees.</string>
    <string name="date_title">Change date style</string>
    <string name="default_value">Date option 1</string>

    <string-array name="sort_desc_1">
        <item>Hire Date</item>
        <item>Status</item>
    </string-array>


    <string-array name="sort_desc_2">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="date_list">
        <item>Date option 1</item>
        <item>Date option 2</item>
        <item>Date option 3</item>
    </string-array>

    <string-array name="date_values">
        <item>EEEE, MMM d, yyyy</item>
        <item>MM/dd/yyyy</item>
        <item>MMM d, yyyy</item>
    </string-array>
</resources>
