<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
    >


 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstname_text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/first_name_hint"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname_text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/last_name_hint"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/number_text"
        android:inputType="number"
        android:layout_gravity="center_horizontal"
        android:hint="@string/employee_number_hint"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:id="@+id/hire_text"
        android:hint="@string/hire_date_hint"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status_text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/status_hint"
        android:singleLine="true"/>

     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="add"
         android:id="@+id/add_button"
         android:layout_gravity="center_horizontal"/>

 </LinearLayout>

</ScrollView>

